main/default/objects/Activity_Match__c/Activity_Match__c.object-meta.xml
<CustomObject>
    <label>Activity Match</label>
    <nameField>
        <displayFormat>AM-{0000}</displayFormat>
        <label>Match ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>