main/default/objects/Activity_Match__c/fields/Contribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Type__c</fullName>
    <label>Contribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enabling</fullName>
                <default>true</default>
                <label>Enabling</label>
            </value>
            <value>
                <fullName>Transitional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>