main/default/objects/Activity_Match__c/fields/Economic_Activity__c.field-meta.xml
<CustomField>
    <fullName>Economic_Activity__c</fullName>
    <inlineHelpText>Associated activity</inlineHelpText>
    <label>Economic Activity</label>
    <referenceTo>Economic_Activity__c</referenceTo>
    <relationshipLabel>Activity Matches</relationshipLabel>
    <relationshipName>Activity_Matches</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>