main/default/objects/Activity_Match__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <description>Taxonomy objective</description>
    <label>Objective</label>
    <referenceTo>Environmental_Objective__c</referenceTo>
    <relationshipLabel>Activity Matches</relationshipLabel>
    <relationshipName>Activity_Matches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>