main/default/objects/Activity_Match__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Economic_Activity__c</columns>
    <columns>Objective__c</columns>
    <columns>Contribution_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>